# smallcv

./: CMakeLists.txt
api/smallcv/: benchmark.hpp  border.hpp  imageio.hpp  imdraw.hpp  imshow.hpp  mat.hpp  resize.hpp  smallcv.hpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  version.h
build2/examples/: Makefile  basic_example  cmake_install.cmake
compile/: CMakeCache.txt
examples/: example.cpp
src/smallcv/: benchmark.cpp  imageio.cpp  imdraw.cpp  improc_private.cpp  improc_private.hpp  imshow.cpp  resize.cpp  smallcv.cpp
tests/: CMakeLists.txt  example.cpp
